--- a/infra/k8s/mongodb/mongo-deployment.yaml
+++ b/infra/k8s/mongodb/mongo-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: mongo
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: mongo
@@ -42,3 +42,18 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-nodeport-service
+spec:
+  type: NodePort
+  selector:
+    app: mongo
+  ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
+      nodePort: 30201
