--- a/authentication/package.json
+++ b/authentication/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/**/*.test.ts"
+    ],
+    "verbose": true,
+    "forceExit": true
+  },
   "scripts": {
     "start:ts": "tsc -w",
     "start:js": "nodemon build/server.js",
     "start": "concurrently npm:start:*",
-    "prod": "tsc && node build/server.js"
+    "prod": "tsc && node build/server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,10 +33,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
