--- a/authentication/package.json
+++ b/authentication/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pschatapp/middleware": "^1.1.1",
     "@pschatapp/response": "^1.1.1",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
